# BetaDecaySimulation

./: Architecture.ini  CMakeLists.txt  FINAL_MISSING_FILES.md  README.md  build.sh  init_vis.mac  quizk_start.md  run.mac  vis.mac
docs/: Building_installing.md  FILE_SUMMARY.md  Project_structure.md  README.md
files/: SETUP_INSTRUCTIONS.md
include/: ActionInitialization.hh  BetaDecay.h  BetaDecay.hh  DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  RunAction.hh  architecture.txt  main_header.h
src/: ActionInitialization.cc  BetaDecay.cc  DetectorConstruction.cc  EventAction.cc  FIller.cpp  PhysicsList.cc  RunAction.cc  main.cc  main_geant4.cpp
sumarry/: sumarry.txt
